--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="ma_button_text">Light UP!</string>
+    <string name="ma_btn_txt_lights_up">Lights UP!</string>
+    <string name="ma_btn_txt_lights_down">Lights DOWN!\n(Orientation locked)</string>
 </resources>
