--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,18 @@
     <string name="ma_btn_txt_lights_up">Lights UP!</string>
     <string name="ma_btn_txt_lights_down">Lights DOWN!\n(Orientation locked)</string>
 
-<!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <!--Preferences-->
+    <string name="pref_auto_on">Auto On</string>
+    <string name="pref_auto_on_summ">On App Launch Turn The Flash On</string>
+    <string name="app_name_settings">Torch Settings</string>
+    <string name="action_about">About</string>
+    <string name="about_dialog_message">This app has been coded by me, Aidanas, charge, ad or in app
+        purchase free.</string>
+
+    <string name="about_dialog_support">
+        However, if you wish to support me with a cup of coffee you are more than welcome to do so,
+        my PayPal - Aidanas@inbox.com, thank you. ;) </string>
+    <string name="about_dialog_title">Just a basic torch, v1.0</string>
+    <string name="OK">OK</string>
+
 </resources>
