support for Ice Cream Sandwich added, "No flash Detected" dialog added.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,7 @@
         my PayPal - Aidanas@inbox.com, thank you. ;) </string>
     <string name="about_dialog_title">Just a basic torch, v1.0</string>
     <string name="OK">OK</string>
+    <string name="no_flash_found">No Camera Flash Found!</string>
+    <string name="dlg_no_flash_found_tw">Application could not find camera flash!\nMake sure the device has got camera and an LED flash!</string>
 
 </resources>
