--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,8 @@
     <string name="OK">OK</string>
     <string name="no_flash_found">No Camera Flash Found!</string>
     <string name="dlg_no_flash_found_tw">Application could not find camera flash!\nMake sure the device has got camera and an LED flash!</string>
+    <string name="light_on_duration">Light ON duration</string>
+    <string name="light_off_duration">Light OFF duration</string>
 
     <string-array name="nav_drawer_titles">
         <item>Torch</item>
