init commit for adding headder into navdraw.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,5 +35,6 @@
     <string-array name="nav_drawer_titles">
         <item>Torch</item>
         <item>Strobe</item>
+        <item>Morse</item>
     </string-array>
 </resources>
