--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,3 @@
-
 <resources>
     <string name="app_name">Torch</string>
 
@@ -37,4 +36,9 @@
         <item>Strobe</item>
         <item>Morse</item>
     </string-array>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="transmit">Transmit</string>
+    <string name="enter_text_to_transmit">Enter text to transmit...</string>
 </resources>
