--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="pref_auto_on_summ">On App Launch Turn The Flash On</string>
     <string name="app_name_settings">Torch Settings</string>
     <string name="action_about">About</string>
-    <string name="about_dialog_message">This app has been coded for you by <b>A.T.</b>, charge, ad or
+    <string name="about_dialog_message">This app has been coded for you by <b>A.T.</b> charge, ad or
         in-app-purchase free.</string>
 
     <string name="about_dialog_support">
