getCamera() deals with RuntimeException witch is thrown if the camera is being used by some other application at that time. Icon restyled.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
         PlayStore.
         If you wish to support us with a cup of coffee, however, then you are more than welcome to
         do so by PayPal: Aidanas@inbox.com, thank you.</string>
-    <string name="about_dialog_title">Torch Tools v2.2</string>
+    <string name="about_dialog_title">Torch Tools v</string>
     <string name="OK">OK</string>
     <string name="Cancel">Cancel</string>
     <string name="no_flash_found">No Camera Flash Found!</string>
